# topological-bone-analysis

./: .gitignore  LICENSE  README.md  SVM.py  ad_hoc_size_analysis.py  example.ipynb  permutation_hypothesis_test.py  persistence_statistics_per_quadrant.py  persistent_homology_SEDT.py  preprocessing_images.py  requirements.txt  run_process.py  setup.cfg  unit_tests.py  ut_persistence_statistics_per_quadrant.py  ut_persistent_homology_SEDT.py  ut_preprocessing_images.py  utils.py  visualise_patch_scores.py
docs/: .buildinfo  Makefile  SVM.html  example_copy.html  example_copy.ipynb  genindex.html  index.html  modules.html  objects.inv  permutation_hypothesis_test.html  persistence_statistics_per_quadrant.html  persistent_homology_SEDT.html  plots.html  preprocessing_images.html  py-modindex.html  run_process.html  search.html  searchindex.js  src.html  utils.html  visualise.html
docs/.doctrees/: SVM.doctree  environment.pickle  example_copy.doctree  index.doctree  modules.doctree  permutation_hypothesis_test.doctree  persistence_statistics_per_quadrant.doctree  persistent_homology_SEDT.doctree  plots.doctree  preprocessing_images.doctree  run_process.doctree  src.doctree  utils.doctree  visualise.doctree  visualise_patch_scores.doctree
docs/_modules/: SVM.html  index.html
docs/_sources/: example_copy.ipynb.txt  index.rst.txt  plots.rst.txt  src.rst.txt  (+6 more)
src/: SVM.py  example.ipynb  persistence_statistics_per_quadrant.py  plots.py  run_process.py  utils.py  visualise_patch_scores.py
tests/: ut_persistence_statistics_per_quadrant.py  ut_persistent_homology_SEDT.py
(+449 files in other folders)
