[metadata]
name = topological_bone_analysis
version = 0.0.1
author = Ysanne Pritchard
author_email = yp4g14@soton.ac.uk
description = This code can be used for topological porosity analysis of greyscale images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://yp4g14.github.io/topological-bone-analysis/ 
project_urls =
    Bug Tracker = https://github.com/yp4g14/topological-bone-analysis/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    seaborn
    scikit-image
    scikit-learn
    pillow
    numpy
    pandas
    scipy
    tqdm
    statsmodels
    homcloud

[options.packages.find]
where = src